12_5/deny-ingress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-ingress
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
  - Ingress
  - Egress
