12_5/pod-communication.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-communication
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-node
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: hello-node
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: hello-node
